--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <other><a href="courses.html">Courses</a> </other>
         </div>
     </header>
-    <header><h1 class="center">Welcome to Creeper University</h1></header>
+    <header><h1 class="center">Welcome to Creeper University lol</h1></header>
     <main><article>
         <!-- This is the slideshow thing -->
         <div class="slideshow-container">
