--- a/typingtest.html
+++ b/typingtest.html
@@ -9,7 +9,7 @@
 <body>
    <div id="tt"></div>
 
-   <script> src="typing-test.js></script>
+   <script src="typing-test.js"></script>
 
    <script>
     buildTypingTest("tt");
