--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
             <brand> <a href="index.html"> <img src="univerisity.png" alt="" style="height: 100px"></a></brand>
             <other> <a href="about.html">about</a></other>
             <other><a href="courses.html">Courses</a> </other>
+            <other><a href="typingtest.html">Typing Test</a> </other>
         </div>
 
 
