--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <header>
-        <div class="topnav">
-            <brand> <a href="index.html"> <img src="univerisity.png" alt="" style="height: 100px"></a></brand>
-            <other> <a href="about.html">about</a></other>
-            <other><a href="courses.html">Courses</a> </other>
-        </div>
+      <div class="topnav">
+        <brand> <a href="index.html"> <img src="univerisity.png" alt="" style="height: 100px"></a></brand>
+        <other> <a href="about.html">about</a></other>
+        <other><a href="courses.html">Courses</a> </other>
+        <other><a href="typingtest.html">Typing Test</a> </other>
+    </div>
     </header>
     <header><h1 class="center">Welcome to Creeper University</h1></header>
     <main><article>
