--- a/about.html
+++ b/about.html
@@ -60,5 +60,8 @@
     <aside><li><a href="index.html">Home page. </li>
     <li></a> <a href="courses.html">Courses.</a></li>
     </ul></aside></main> -->
+    <h3 id="here">hi</h3>
+    <script src="script.js">
+    </script>
 </body>
 </html>
